--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,13 @@
 
     <data>
 
-        <import type="com.oslofjorden.oslofjordenturguide.usecase.browseMap.MapsActivityViewModel" />
+        <import type="com.oslofjorden.usecase.browseMap.MapsActivityViewModel" />
 
         <import type="android.view.View" />
 
         <variable
             name="viewmodel"
-            type="com.oslofjorden.oslofjordenturguide.usecase.browseMap.MapsActivityViewModel" />
+            type="com.oslofjorden.usecase.browseMap.MapsActivityViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
