--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -32,33 +32,49 @@
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="Tur bygdøy rundt." />
+            tools:text="Laster data. Vennligst vent..." />
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            tools:text="Personvern"
-            android:id="@+id/title"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:textColor="@android:color/black"
-            android:layout_height="wrap_content">
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="Personvern">
 
 
         </TextView>
 
-        <TextView
-            android:id="@+id/description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center|start"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:text="Flott rundtur bygdøy rundt" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_weight="0.8"
+                android:id="@+id/description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="center|start"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                tools:text="Oslofjorden samler inn noe data for å gjøre opplevelsen din best mulig." />
+
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ikke vis igjen"
+                android:id="@+id/checkBox"
+                android:layout_weight="0.2"
+                android:checked="true" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/url"
