--- a/app/src/main/res/layout/bottomsheet.xml
+++ b/app/src/main/res/layout/bottomsheet.xml
@@ -69,7 +69,7 @@
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ikke vis igjen"
+                android:text="@string/privacy_policy_checkbox"
                 android:id="@+id/checkBox"
                 android:layout_weight="0.2"
                 android:checked="true" />
